fix spacing

--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -8,7 +8,6 @@ footer {
   position: absolute;
   width: 100%;
   overflow: hidden;
-
 }
 
 .footer-text {
@@ -17,11 +16,11 @@ footer {
   justify-content: center;
   align-items: center;
   color: white;
-
+  margin-left: 8px;
 }
 @media (max-width: 455px) {
   .footer-text {
     display: none;
-    z-index: 10
+    z-index: 10;
   }
 }
